--- a/pages/discografica.html
+++ b/pages/discografica.html
@@ -4,29 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body class="body-discografica">
     <header class="header">
-		<div class="container">
-		<div class="btn-menu">
-			<label class="logo-menu" for="btn-menu"><img src="../img/menu-burger.png" alt=""></label>
-		</div>
-        <input type="checkbox" id="btn-menu">
-        <div class="container-menu">
-        <div class="cont-menu">
-            <nav>
-                <a href="../index.html">Inicio</a>
-                <a href="./bio.html">Biografia</a>
-                <a href="./hits.html">Galeria</a>
-                <a href="./tour.html">Tour</a>
-                <a href="./discografica.html">Discografica</a>
-                <a href="./tienda.html">Tienda</a>
-                <a href="./contacto.html">Contacto</a>
-            </nav>
-        <label class="logo-cross" for="btn-menu"><img src="../img/cross.png" alt=""></label>
+        <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="">
+        </button>
+
+        <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+            aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header menu-color">
+                <h5 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body menu-color">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./bio.html">Biografia</a></li>
+                        <li><a href="./hits.html">Galeria</a></li>
+                        <li><a href="./tour.html">Tour</a></li>
+                        <li><a href="./discografica.html">Discografica</a></li>
+                        <li><a href="./tienda.html">Tienda</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        </div>      
     </header>
     <main>
         <section>
@@ -76,5 +83,8 @@
             <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
