--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
             </div>
         </div>
     </header>
-    <main>
-        <section>
+    <main class="main-index">
             <h1 class="h1-index">DUKI</h1>
-        </section>
     </main>
     <footer>
         <!--REDES-->
