--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,10 +11,10 @@
 </head>
 
 <body class="body-contacto">
-    <header class="header">
+    <header class="header header-tienda">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img
-                src="..//img/menu-burger.png" alt="">
+                src="..//img/menu.png" alt="">
         </button>
 
         <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1"
@@ -38,35 +38,32 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main-contacto">
         <section>
-            <div>
-                <h1>CONTACTO</h1>
-            </div>
-            <div>
-                <p>Nos interesa conocerte y saber tù opinion al respecto, saber que es lo que te gustaria, contenido que
-                    desees ver o cambios que harias.<br>Recorda que tù opinion es de gran interes!</p>
-            </div>
-        </section>
-        <section>
+
+            <h1>CONTACTO</h1>
+
+            <p>Nos interesa conocerte y saber tú opinion al respecto del contenido que
+                deseas ver o cambios que harias.<br>Recorda que tù opinion es de gran interes!</p>
+
             <form>
                 <div class="row mb-3">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                    <label for="inputEmail3" class="col-sm-2 col-form-label texto-form">Email:</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3">
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Nombre</label>
+                    <label for="inputPassword3" class="col-sm-2 col-form-label texto-form">Nombre:</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="inputPassword3">
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Mensaje</label>
+                    <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label texto-form">Mensaje:</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" id="exampleFormControlTextarea1"></textarea>
-                    </div>  
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
@@ -76,16 +73,16 @@
         <!--REDES-->
         <ul>
             <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                    target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt=""></a>
+                    target="_blank"><img src="../img/twitter-alt-square-rojo.png" alt=""></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok-rojo.png" alt=""></a>
             </li>
             <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img
-                        src="../img/spotify.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt=""></a>
+                        src="../img/spotify-rojo.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook-rojo.png" alt=""></a>
             </li>
             <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img
-                        src="../img/youtube.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a>
+                        src="../img/youtube-rojo.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram-rojo.png" alt=""></a>
             </li>
         </ul>
     </footer>
