--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -8,8 +8,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <header class="header">
+<body class="body-tienda">
+    <header class="header header-tienda">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="">
         </button>
@@ -35,30 +35,30 @@
             </div>
         </div>
     </header>
-    <main>
-        <section>
+    <main class="main-tienda">
+        
             <h1 class="tienda">TIENDA</h1>
-        </section>
-        <section>
-            <div class="tarjeta-producto">
+        
+        <section class="section-tienda">
+            <div class="tarjeta-producto producto-1">
                 <!--IMAGEN-->
                 <img src="../img/DEFDM frente.png" alt="">
                 <h2>Remera Desde El Din Del Mundo Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1811048120-remera-desde-el-fin-del-mundo-negra-_JM#position%3D1%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3D35e87291-4084-475b-9dc6-07b1e3ee764b" target="_blank">Comprar</a>
             </div>
-            <div class="tarjeta-producto">
+            <div class="tarjeta-producto producto-2">
                 <!--IMAGEN-->
                 <img src="../img/All Tree frente.png" alt="">
                 <h2>Remera All Tree Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1433589145-remera-all-tree-negra-_JM#position%3D2%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3Da0dfd77e-ab82-4578-ae1a-e01ffd4a44ff" target="_blank">Comprar</a>
             </div>
-            <div class="tarjeta-producto">
+            <div class="tarjeta-producto producto-3">
                 <!--IMAGEN-->
                 <img src="../img/4d frente.png" alt="">
                 <h2>Remera 4d Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1433630335-remera-4d-negra-_JM#position%3D3%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3D9a90da8f-2e1c-44ce-ad0c-fd1f06451747" target="_blank">Comprar</a>
             </div>
-            <div class="tarjeta-producto">
+            <div class="tarjeta-producto producto-4">
                 <!--IMAGEN-->
                 <img src="../img/buzo 4d frente.jpeg" alt="">
                 <h2>Buzo 4d Negro</h2>
