--- a/pages/discografica.html
+++ b/pages/discografica.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,16 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body class="body-discografica">
     <header class="header">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="">
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img
+                src="..//img/menu-burger.png" alt="">
         </button>
 
-        <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-            aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1"
+            id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header menu-color">
                 <h5 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -35,56 +38,82 @@
             </div>
         </div>
     </header>
-    <main>
-        <section>
+    <main class="main-discografica">
+        <section class="section-discografica-texto">
+            <h1>DISCOGRAFICA</h1>
             <div>
-                <h1>DISCOGRAFICA</h1>
-            </div>
-            <div>
-                <p>Conoce y disfruta de los discos de Duki</p>
-            </div>
-            <div>
+                <p>Conoce y disfruta de los discos de Duki</p><br>
                 <p>NO OLVIDES SEGUIR SU CUENTA DE SPOTIFY</p>
             </div>
         </section>
-        <section>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1bAftSH8umNcGZ0uyV7LMg?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/26nUVuonXEdbJTo9PeBYoR?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6anO6Uh11TivGpTI56aKCH?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/48vGyeerQqM7mWU0JzRkAl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3MKQjYpaES80tFP7Qo2zH0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4QefABr1DLTsrqSmuu2Bf8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1SbMoaKFJWo8u1tb2dAgHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="duki-spotify" style="border-radius:12px"
+            src="https://open.spotify.com/embed/artist/1bAftSH8umNcGZ0uyV7LMg?utm_source=generator&theme=0" width="100%"
+            height="352" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <section class="section-discografica-albunes">
+
+
+            <iframe class="album-1" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/26nUVuonXEdbJTo9PeBYoR?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+
+            <iframe class="album-2" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/6anO6Uh11TivGpTI56aKCH?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+
+            <iframe class="album-3" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/48vGyeerQqM7mWU0JzRkAl?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+            <iframe class="album-4" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/3MKQjYpaES80tFP7Qo2zH0?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+            <iframe class="album-5" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/4QefABr1DLTsrqSmuu2Bf8?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+            <iframe class="album-6" style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/1SbMoaKFJWo8u1tb2dAgHt?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
             </div>
         </section>
-        
+
     </main>
     <footer>
         <!--REDES-->
         <ul>
-            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt=""></a></li>
-            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt=""></a></li>
-            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a></li>
+            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                    target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt=""></a>
+            </li>
+            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img
+                        src="../img/spotify.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt=""></a>
+            </li>
+            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img
+                        src="../img/youtube.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a>
+            </li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
