--- a/pages/hits.html
+++ b/pages/hits.html
@@ -8,10 +8,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body class="body-galeria">
     <header class="header">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="">
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu.png" alt="">
         </button>
 
         <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -36,22 +36,22 @@
         </div>
     </header>
     <main class="main-galeria">
-        <section>
+        <section class="section-galeria">
             <h1>GALERIA</h1>
-            <div class="fotos">
+            <div class="fotos-1">
                 <img src="../img/galeria1.jpeg" alt="">
                 <img src="../img/galeria2.jpeg" alt="">
                 <img src="../img/galeria3.jpeg" alt="">
             </div>
-            <div class="fotos">
+            <div class="fotos-2">
                 <img src="../img/galeria4.jpeg" alt="">
                 <img src="../img/galeria5.jpeg" alt="">
                 <img src="../img/cantando.jpeg" alt="">
             </div>
         </section>            
-        <section>
+        <section class="section-videos">
             <h2>VIDEOS</h2>
-            <div>
+            <div class="video-1">
                 <!--Call ME Maybe-->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6fy4mr-_8SA?si=y1dNyAr--cIBmnGa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <!--Harakiri-->
@@ -59,7 +59,7 @@
                 <!--Givenchy-->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ymvYySd_P2E?si=RJ5PyeSYFg1y34vh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <div>
+            <div class="video-2">
                 <!--Celosa-->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/DNXCue-8HOY?si=BIjfdI_0Oe_Bf5xs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <!--Top 5-->
@@ -69,15 +69,15 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer-galeria">
         <!--REDES-->
         <ul>
-            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt=""></a></li>
-            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt=""></a></li>
-            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a></li>
+            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square-rojo.png" alt=""></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok-rojo.png" alt=""></a></li>
+            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify-rojo.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook-rojo.png" alt=""></a></li>
+            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube-rojo.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram-rojo.png" alt=""></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
